update 2016博客计划.md add markdown语法参考.md

--- a/source/_posts/2016博客计划.md
+++ b/source/_posts/2016博客计划.md
@@ -15,8 +15,8 @@ tags: [plan,计划,博客]
 下面的todo list 在后面慢慢写作的时候还需要逐渐补充，争取完善一个比较合理的目录
 
 ## TODO
-### 基于hexo的博客搭建
-### markdown语法列表
+### ~~基于hexo的博客搭建~~
+### ~~markdown语法列表~~
 ### 如何有效的管理时间
 ### 架构师打怪升级之路
 ### solid原则
